tests/invalid_inputs/sema/class_member_redefinition.cpp

struct S {
	int i;
	int i;
};
